reverting changes for #1474
