# prime-router/docs/openapi.yml
@@ -496,7 +496,7 @@ components:
           description: total destinations recieving the report(s)
           type: integer
         routing:
-          description: The receiver destination names for each item in the report. This is displayed when verbose=all is present on the query string.
+          description: The receiver destination names for each item in the report. This is displayed when verbose=true is present on the query string.
           type: array
           items:
             $ref: '#/components/schemas/ItemRouting'
@@ -556,9 +556,12 @@ components:
     ItemRouting:
       type: object
       properties:
+        reportIndex:
+          type: integer
+          description: the index of the item in the submitted report (0 based)
         trackingId:
           type: string
-          description: The tracking id provided by the sender or genrated based on the report item index
+          description: The tracking id provided by the sender defined in the schema, null otherwise
         destinations:
           description: The organization and service destinations
           type: array
